--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Rectangle Mobile Template</title>
+<title>Mitlt's Blog</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/normalize.css">
@@ -28,7 +28,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 col-sm-6 col-xs-12">
-				<p class="phone-info">Call us: <a href="#">010 020 0340</a></p>
+				<p class="phone-info">Call us: <a href="#">110</a></p>
 			</div>
 			<div class="col-md-6 col-sm-6 col-xs-12">
 				<div class="social-icons">
@@ -67,7 +67,6 @@
 		</ul>
 	</div>
 </div>
-<div class="copyrights">Collect from <a href="http://www.mycodes.net" >免费模板</a></div>
 <div class="container" id="page-content">
 	<div class="row">
 
@@ -84,8 +83,7 @@
 				
 				<div id="menu-1" class="homepage home-section text-center">
 					<div class="welcome-text">
-						<h2>Hello, Welcome to <strong>RECTANGLE</strong></h2>
-						<p>Rectangle is free mobile template brought to you by <span class="orange">template</span><span class="green">mo</span>.com website. You can download, edit and use this layout for any purpose. Please tell your friends about our website. Thank you.</p>
+						<h2>Hello, Welcome to <strong>Mitltl's Blog</strong></h2>						
 						<form action="#" method="get" class="subscribe-form">
 							<div class="row">
 								<fieldset class="col-md-offset-2 col-md-6">
