--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Mitlt's Blog</title>
+<title>Mitltl's Blog</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/normalize.css">
@@ -83,7 +83,8 @@
 				
 				<div id="menu-1" class="homepage home-section text-center">
 					<div class="welcome-text">
-						<h2>Hello, Welcome to <strong>Mitltl's Blog</strong></h2>						
+						<h2>Hello, Welcome to <strong>Mitltl's Blog</strong></h2>
+						<p>Welcome to <span class="orange">河北骚话群</span>. This is <strong><span class="red">Yu</span></strong></p>
 						<form action="#" method="get" class="subscribe-form">
 							<div class="row">
 								<fieldset class="col-md-offset-2 col-md-6">
