--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 text-center">
-				<p>Copyright &copy; 2084 Company Name | More Templates - Collect from <a href="http://www.mycodes.net">网站模板</a></p>
+				<p>Copyright &copy; 2020 Mitltl</p>
 			</div>
 		</div>
 	</div>
