--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				<div id="menu-1" class="homepage home-section text-center">
 					<div class="welcome-text">
 						<h2>Hello, Welcome to <strong>Mitltl's Blog</strong></h2>
-						<p>Welcome to <span class="orange">河北骚话群</span>. This is <strong><span class="red">Yu</span></strong></p>
+						<p>Welcome to <span class="orange">淦，看啥？</span>. This is <strong><span class="red">Yu</span></strong></p>
 						<form action="#" method="get" class="subscribe-form">
 							<div class="row">
 								<fieldset class="col-md-offset-2 col-md-6">
